<resources>
    <string name="app_name">BBallScoreBoard</string>
    <string name="pt_3">3Pt</string>
    <string name="pt_2">2Pt</string>
    <string name="pt_1">1Pt</string>
    <string name="bucket">Bucket</string>
    <string name="miss_bucket">Miss</string>

    <string name="rebound">Reb.</string>
    <string name="offensive_rebound">O-Reb.</string>
    <string name="defensive_rebound">De-Reb.</string>
    <string name="steal">Steal</string>
    <string name="add">Add</string>
    <string name="faul">Faul</string>
    <string name="faul_out">Faul Out</string>
    <string name="turnover">Turnover</string>
    <string name="block">Block</string>
    <string name="zero">0</string>
    <string name="zero_zero">0/0</string>


    <string name="scoreboard_main_activity">ScoreBoard</string>
    <string name="statistics_main_activity">Statistics</string>

    <string name="login">LogIn</string>
    <string name="first_name_team">FirstName</string>
    <string name="last_name_team">LastName</string>
    <string name="position_team">Position</string>
    <string name="team_main_activity">Team</string>
    <string name="team_name_title">Team Name</string>
    <string name="jersey_number_team">JerseyNumber</string>
    <string name="first_name_player_activity">First Name</string>
    <string name="last_name_player_activity">Last Name</string>
    <string name="jersey_number_player_activity">Jersey Number</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="height_player_activity">Height</string>
    <string name="weight_player_activity">Weight</string>
    <string name="player_main_activity">Player</string>
    <string name="name_anonymous">anonymous</string>

    <string name="player_position">Player Position</string>
    <string name="empty_view_list_all_teams">No teams added</string>
    <string name="empty_view_list_all_players">No players added</string>
    <string name="assist">Assist</string>
    <string-array name="player_position">
        <item>Unclear</item>
        <item>Center</item>
        <item>Big Forward</item>
        <item>Small Forward</item>
        <item>Point Guard</item>
        <item>Shooting Guard</item>
    </string-array>
</resources>
