<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.leontheprofessional.bballscoreboard.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/pt_2" />

            <Button
                android:id="@+id/btn_ptr_2_bucket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/bucket" />

            <Button
                android:id="@+id/btn_ptr_2_miss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/miss_bucket" />

            <TextView
                android:id="@+id/pt_2_score_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero_zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/pt_3" />

            <Button
                android:id="@+id/btn_ptr_3_bucket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/bucket" />

            <Button
                android:id="@+id/btn_ptr_3_miss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/miss_bucket" />

            <TextView
                android:id="@+id/pt_3_score_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero_zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/pt_1" />

            <Button
                android:id="@+id/btn_ptr_1_bucket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/bucket" />

            <Button
                android:id="@+id/btn_ptr_1_miss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/miss_bucket" />


            <TextView
                android:id="@+id/pt_1_score_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero_zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/rebound" />

            <Button
                android:id="@+id/btn_def_reb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/defensive_rebound" />

            <Button
                android:id="@+id/btn_off_reb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/offensive_rebound" />


            <TextView
                android:id="@+id/rebound_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero_zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/faul" />

            <Button

                android:id="@+id/btn_faul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/add" />

            <TextView
                android:id="@+id/faul_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/turnover" />

            <Button
                android:id="@+id/btn_turnover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/add" />

            <TextView
                android:id="@+id/turnover_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/block" />

            <Button
                android:id="@+id/btn_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/add" />

            <TextView
                android:id="@+id/block_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/steal" />

            <Button
                android:id="@+id/btn_steal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/add" />

            <TextView
                android:id="@+id/steal_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_revoke_last_performance_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="@dimen/fab_margin"
            android:elevation="6dp"
            android:src="@android:drawable/ic_menu_revert"
            app:borderWidth="0dp" />

    </LinearLayout>

</ScrollView>
