<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_horizontal_margin"
            android:text="@string/first_name_player_activity"
            android:textSize="@dimen/text_size_12sp" />

        <EditText
            android:id="@+id/et_first_name_player_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_horizontal_margin"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_horizontal_margin"
            android:text="@string/last_name_player_activity"
            android:textSize="@dimen/text_size_12sp" />

        <EditText
            android:id="@+id/et_last_name_player_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_horizontal_margin"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_horizontal_margin"
            android:text="@string/jersey_number_player_activity"
            android:textSize="@dimen/text_size_12sp" />

        <EditText
            android:id="@+id/et_jersey_number_player_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_horizontal_margin"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_horizontal_margin"
            android:text="@string/height_player_activity"
            android:textSize="@dimen/text_size_12sp" />

        <EditText
            android:id="@+id/et_height_player_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_horizontal_margin"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_horizontal_margin"
            android:text="@string/weight_player_activity"
            android:textSize="@dimen/text_size_12sp" />

        <EditText
            android:id="@+id/et_weight_player_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edittext_horizontal_margin"
            android:layout_weight="2" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_player_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_confirm_player_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>