<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/first_name_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/textview_vertical_margin"
        android:layout_weight="1"
        android:text="@string/first_name_team"
        android:textSize="@dimen/text_size_12sp" />

    <TextView
        android:id="@+id/last_name_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/textview_vertical_margin"
        android:layout_marginLeft="@dimen/textview_horizontal_margin"
        android:layout_marginRight="@dimen/textview_horizontal_margin"
        android:layout_marginTop="@dimen/textview_vertical_margin"
        android:layout_weight="1"
        android:text="@string/last_name_team"
        android:textSize="@dimen/text_size_12sp" />

    <TextView
        android:id="@+id/position_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/textview_vertical_margin"
        android:layout_marginLeft="@dimen/textview_horizontal_margin"
        android:layout_marginRight="@dimen/textview_horizontal_margin"
        android:layout_marginTop="@dimen/textview_vertical_margin"
        android:layout_weight="1"
        android:text="@string/position_team"
        android:textSize="@dimen/text_size_12sp" />

    <TextView
        android:id="@+id/jersey_number_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/textview_vertical_margin"
        android:layout_marginLeft="@dimen/textview_horizontal_margin"
        android:layout_marginRight="@dimen/textview_horizontal_margin"
        android:layout_marginTop="@dimen/textview_vertical_margin"
        android:layout_weight="1"
        android:text="@string/jersey_number_team"
        android:textSize="@dimen/text_size_12sp" />

    <ImageView
        android:id="@+id/starting_5_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/textview_vertical_margin"
        android:layout_marginLeft="@dimen/textview_horizontal_margin"
        android:layout_marginRight="@dimen/textview_horizontal_margin"
        android:layout_marginTop="@dimen/textview_vertical_margin"
        android:layout_weight="1" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/textview_vertical_margin"
        android:layout_marginLeft="@dimen/textview_horizontal_margin"
        android:layout_marginRight="@dimen/textview_horizontal_margin"
        android:layout_marginTop="@dimen/textview_vertical_margin"
        android:layout_weight="1" />


</LinearLayout>